cmake_minimum_required (VERSION 2.8)
project (ROUTING_SIM)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${ROUTING_SIM_SOURCE_DIR}/cmake_components")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror -stdlib=libc++")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Werror -std=c99")
include_directories (${ROUTING_SIM_SOURCE_DIR}/include thpool)
find_package(GSL)
add_subdirectory (thpool)
if (GSL_FOUND) 
    include_directories(${GSL_INCLUDE_DIRS})
else ()
    message(FATAL_ERROR "GSL not found")
endif (GSL_FOUND)
find_package(igraph)
if (IGRAPH_FOUND)
    include_directories(${IGRAPH_INCLUDE_DIRS})
    message(${IGRAPH_INCLUDE_DIRS})
else()
    message(FATAL_ERROR "igraph not found")
endif (IGRAPH_FOUND)
file(GLOB routing_sources . src/*.c)
add_executable (routing ${routing_sources})
target_link_libraries(routing ${GSL_LIBRARIES})
target_link_libraries(routing ${IGRAPH_LIBRARIES})
target_link_libraries(routing thpool)
