find_package(GSL)
if (GSL_FOUND) 
    include_directories(${GSL_INCLUDE_DIRS})
else ()
    message(FATAL_ERROR "GSL not found")
endif (GSL_FOUND)
find_package(igraph)
if (IGRAPH_FOUND)
    include_directories(${IGRAPH_INCLUDE_DIRS})
else()
    message(FATAL_ERROR "igraph not found")
endif (IGRAPH_FOUND)
add_executable (routing main.c)
target_link_libraries(routing ${GSL_LIBRARIES})
target_link_libraries(routing ${IGRAPH_LIBRARIES}) 
